<resources>
    <string name="app_name">Madar Task</string>
    <string name="save_user">Save User</string>
    <string name="show_all_users">Show All Users</string>
    <string name="job_title">Job Title</string>
    <string name="full_name">Full Name</string>
    <string name="please_enter_your_info">Please Enter your Info.</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="gender_hint">Gender:</string>
</resources>